--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ body{
     overflow-x:hidden;
     font-family: 'Poppins';
 }
+html{
+    scroll-behavior:smooth;
+}
 
 /* Header */
 
@@ -76,10 +79,6 @@ header .nav-btn{
     display:none;  
 }
 
-
-header h1{
-
-}
 header nav{
     display: flex;
     gap:20px;
@@ -91,7 +90,7 @@ header nav .spec-link{
 
 /* Footer */
 footer{
-    margin-top:300px;
+    margin-top:100px;
     padding:20px;
 
 }
@@ -104,8 +103,18 @@ footer .links .link-area{
     display:flex;
     flex-direction:column;
     gap:20px;
+    
 
 }
+footer .link .link-area a{
+    transition:all 0.4s;
+}
+footer .links .link-area a:hover{
+    scale:0.99;
+    transition:all 0.4s;
+    text-shadow: 2px 3px 5px white;
+}
+
 footer form{
     display:flex;
     gap:20px;
@@ -222,15 +231,283 @@ footer .bottom{
 .card video{
     width:200px;
 }
+/*------- Liste Alani --------- */
+#list-sec{
+    margin:50px 0;
+}
+#list-sec .info{
+    display:flex;
+    justify-content:space-between;
+    gap:40px;
+}
+#list-sec .info h2, .info p{
+    max-width:400px;
+}
+#list-sec ul li{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    margin-top:40px;
+    border-bottom:1px solid gray;
+    padding-bottom:40px;
+}
+#list-sec ul li h1 span{
+    color:gray;
+    font-weight:400;
+    font-size:15px;
+    margin-bottom:5px;
+}
+#list-sec ul li img{
+    width:50px;
+}
+
+/*! --------Projeler Sayfasi----------- */
+.welcome{
+    font-size:60px;
+    max-width:1300px;
+    padding:50px;
+    background: linear-gradient(45deg,#2bff88 0%, #3F5EFB 30%, #FC466B 70%);
+    background-clip:border-box;
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+
+}
+
+#what-sec{
+    display:flex;
+    justify-content:space-between;
+    gap:40px;
+}
+#what-sec .info{
+    max-width:400px;
+}
+
+#what-sec .info h1{
+    display:flex;
+    gap:100px;
+}
+
+#what-sec .cards{
+    display:flex;
+    gap:100px;
+}
+
+#what-sec .cards .what-card{
+    min-width:200px;
+    max-width:400px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    gap:20px;
+    text-align:center;
+    background-color:#323443;
+    border-radius:10px;
+    padding:30px 20px;
+    position:relative;
+}
+#what-sec .cards .what-card img{
+    width:50px;
+    position:absolute;
+    top:-50px;
+}
+
+/* Projeler Alani */
+#projects-sec{
+    display:flex;
+    flex-direction:column;
+    gap:40px;
+}
+
+#projects-sec .project{
+    display:flex;
+    align-items:center;
+    gap:30px;
+
+}
+.project-image{
+    background:#323443;
+    padding:40px 60px 0;
+    position:relative;
+    display:flex;
+    align-items:end;
+    
+
+}
+.project-image:hover{
+    background: linear-gradient(45deg,#2bff88 0%, #3F5EFB 30%, #FC466B 70%);
+}
+.project-image img{
+    cursor:pointer;
+}
+.project-image .icon{
+    position:absolute;
+    top:5px;
+    right:5px;
+    background-color:#494a57;
+    display:flex;
+    border-radius:3px;
+    cursor:pointer;
+
+
+}
+.project-info{
+    display:flex;
+    flex-direction:column;
+    gap:30px;
+    max-width:700px;
+}
+
+/* ! ----Team sayfasi--- */
+#count-sec{
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    gap:50px;
+
+}
+.count-sec-left{
+    display:flex;
+    flex-direction:column;
+    gap:50px;
+
+}
+.count-sec-left .counter{
+    padding:20px;
+    background: rgba(255, 255, 255, 0.08);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.8px);
+    -webkit-backdrop-filter: blur(4.8px);
+    border: 1px solid rgba(255, 255, 255, 0.05);
+}
+.counter .boxes{
+    display: grid;
+    grid-template-columns:repeat(4, 1fr);
+    column-gap:20px;
+    margin-top:20px;
+}
+.boxes .box{
+    background-color:rgb(0,0,21);
+    border-radius:10px;
+    padding:10px;
+    text-align:center;
+}
+
+.count-sec-left .buttons{
+    display:flex;
+    gap:20px;
+}
+.count-sec-left .buttons button{
+    background-color:transparent;
+    color:white;
+    border:1px solid var(--green);
+    
+}
+.count-sec-left .buttons button:hover{
+    background-color:var(--green);
+}
+
+.count-sec-right img{
+    border-radius:10px;
+    transition:all 0.2s;
+
+}
+.count-sec-right img:hover{
+    scale:1.05;
+    transition:all 0.4s;
+    filter: drop-shadow(5px 6px 10px black);
+}
+/* ----Resimler Alani----- */
+#images-sec{
+    display:flex;
+    gap:20px;
+    justify-content:space-between;
+}
+.img-wrapper{
+    position:relative;
+    border-radius:20px;
+    transition:all 0.3s;
+}
+.img-wrapper:hover{
+    scale:1.05;
+    transition:all 0.4s;
+
+}
+.img-wrapper img{
+    width:400px;
+    border-radius:20px;
+}
+.img-wrapper h1{
+    position:absolute;
+    bottom:0;
+    width:100%;
+    text-align:center;
+    padding:20px;
+    background: rgba(255, 255, 255, 0.08);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.8px);
+    -webkit-backdrop-filter: blur(4.8px);
+    border: 1px solid rgba(255, 255, 255, 0.05);
+}
+    /* ----Bagis alani----- */
+    #donate-sec{
+        display:inline-block;
+        position:relative;
+        left:50%;
+        transform:translateX(-50%);
+    }
+    .donate-sec-info{
+        display:flex;
+        justify-content:space-between;
+        margin-bottom:30px;
+    }
+    .donate-sec-content{
+        display:grid;
+        grid-template-columns:repeat(4,200px);
+        justify-content:center;
+        gap:40px;
+
+    }
+    
+    .donate-sec-people{
+        display:flex;
+        gap:10px;
+        background:rgb(73, 4, 73);
+        color:white;
+        padding:10px;
+        border-radius:60px;
+        transition:all 0.4s;
+
+    }
+    .donate-sec-people:hover{
+        scale:1.05;
+        box-shadow:2px 2px 20px var(--gray);
+        transition:all 0.4s;
+    }
+
+
+    .donate-sec-people img{
+        width:50px;
+        border-radius:50%;
+    }
 
 
 
 
 
+
+
+
+
+
+
+
+/* !=============Responsive yapilar ===========*/
 
 /* Responsive Yapilar */
 
-/*  800> cihazla icin */
+/* Ekran boyutu 800px altindayken */
 @media(max-width:800px){
     header nav{
         display: none;
@@ -257,9 +534,46 @@ footer .bottom{
     #hero-inner{
         margin:40px;
     }
-}
 
-/*  800> cihazla icin */
+    /* Liste alani */
+    #list-sec{
+        padding:30px;
+        
+    }
+    #list-sec .info{
+        flex-direction:column;
+    }
+    #list-sec .info h1, .info p{
+        /* bu stile hic deger atanmamis gibi yapar */
+        max-width:unset;
+    }
+    #what-sec .info{
+        flex-direction:column;
+        gap:0px !important;
+        margin-bottom:40px;
+    }
+    #what-sec .cards{
+        gap:40px;
+    }
+
+    #count-sec{
+        display:flex;
+        flex-direction:column-reverse;
+    }
+    #count-sec .buttons{
+        font-size:15px;
+        justify-content:space-between;
+    }
+    /* ---Bagis Alani--- */
+    .donate-sec-content{
+        display:grid;
+        grid-template-columns:repeat(2,200px);
+        justify-content:center;
+        gap:40px;
+
+    }
+}
+/* Ekran boyutu 1000px altindayken */
 @media(max-width:1000px){
     footer .links{
         grid-template-columns:1fr 1fr;
@@ -285,17 +599,26 @@ footer .bottom{
         max-width:400px;
     }
 
-}
-
-@media(max-width:1000px){
-    footer .links{
-        padding:5px;
+    /* ----Projeler responsive-- */
+    .welcome{
+        padding:100px 20px;
+        font-size:40px;
     }
-    footer .links{
-        padding: 5px;
-    }
-}
+    /* --bagis alani-- */
+    .donate-sec-content{
+        display:grid;
+        grid-template-columns:repeat(3,200px);
+        justify-content:center;
+        gap:40px;
 
+    }
+ 
+
+
+
+
+}
+/* Ekran boyutu 1200px altindayken */
 @media(max-width:1200px){
     #window-sec{
         flex-direction:column;
@@ -304,10 +627,89 @@ footer .bottom{
     .window{
         height:300px;
     }
-}
+    /* What-Section */
+    #what-sec{
+        display:flex;
+        flex-direction:column;
+        gap:50px;
+    }
+    #what-sec .info{
+        Display:flex;
+        gap:40px;
+        max-width:500px;
+    }
+    #what-sec .info h1{
+        white-space:nowrap;
+    }
+    #what-sec .info p{
+        max-width:unset;
+    }
+    /* --Projeler Alani--- */
+    #projects-sec .project{
+        flex-direction:column-reverse;
+    }
+    #projects-sec .project-image{
+        justify-content:center;
+        padding:20px 100px 0;
 
+    }
+    #images-sec img{
+        width:200px;
+    }
+
+
+}
+/* @media(max-width:1500px;) */
+@media(max-width:1200px){
+    #images-sec{
+        flex-direction:column;
+        align-items:center;
+        gap:50px;
+        margin-top:40px;
+    }
+    #images-sec img{
+        width:400px;
+    }
+}
+/* Ekran boyutu 1000 px den yuksek ise */
 @media(min-width:1000px){
     section{
         padding:100px;
+    }
+    .donate-sec-content{
+        display:grid;
+        grid-template-columns:repeat(5,200px);
+        justify-content:center;
+        gap:80px;
+
+    }
+    .counter .boxes{
+        display: grid;
+        grid-template-columns:repeat(4, 1fr);
+        column-gap:50px;
+        margin-top:20px;
+    }
+}
+/* Ekran boyutu 500px altindayken */
+@media(max-width:500px){
+    footer{
+        padding:5px;
+    }
+    footer .links{
+        padding:5px;
+        column-gap:50px;
+    }
+
+    .project-image{
+        padding:0 30px !important;
+    }
+    .project-image img{
+        width:100%;
+    }
+    .project-image .icon{
+        max-width:30px;
+    }
+    .project-info{
+        margin-top:40px !important;
     }
 }
